--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 body{
   background-color: white;
-  /*background-image: url("../images/background.png");
-
+  background-image: url("../images/de-wp.jpg");
   background-attachment: fixed;
-  background-repeat: no-repeat;*/
-  font-family: 'Open Sans'
+  background-repeat: no-repeat;
+  font-family: 'Open Sans';
+  color: white;
+  /*font-weight: 900;*/
 }
 
 a{
@@ -19,7 +20,6 @@ ul{
   overflow: hidden;
   background-color: #555;
   width: 200px;
-
 }
 
 li a{
@@ -28,7 +28,6 @@ li a{
   width: 200px;
   text-decoration: none;
   background-color: #555;
-
 }
 
 li a:hover{
@@ -38,32 +37,78 @@ li a:hover{
 
 section{
   display: block;
-  padding: 5px 5px 5px 5px;
-  /*margin: 0px 25px;*/
-  margin-left: 15%;
-
+  padding: 5px;
+  margin-top: 0;
+  margin-left: 25%;
   width: 60%;
   overflow: auto;
   text-align: justify;
+  margin-bottom: 5%;
 }
 
-.display-left h1{
-    text-align: left;
+h1{
+  text-align: center;
+  margin-bottom: 5%;
 }
 
-.display-right h1{
-  text-align: right;
+.list-school {
+  display:flex;
+  justify-content: space-between;
 }
 
-.display-left img{
-  display: block;
-  margin-right: auto;
+.list-competence {
+  display:flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  margin-top: 5%;
+  margin-right: 50%;
 }
 
-.display-right img{
-  display: block;
-  margin-left: auto;
+.list-tech {
+  display:flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  margin-top: 5%;
 }
+
+.element-competence{
+  display: flex;
+  justify-content: flex-start;
+  /*justify-content: space-between;*/
+}
+
+.div-center{
+  text-align: center;
+
+}
+
+.element img{
+  margin-left: 30%;
+}
+
+.element p{
+  text-align:center;
+}
+
+.bar{
+  margin-left: 5%;
+
+  width: 15em;
+  height: 1.5em;
+  border-radius: 5em;
+  position: relative;
+  background: #f2f2f2;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 1);
+}
+
+.bar .percentage{
+  position: relative;
+  font-size: 1em;
+  background: red;
+  height: 1.5em;
+  border-radius: 0.5em;
+}
+
 
 #container ul{
   margin-left: auto;
@@ -75,6 +120,8 @@ section{
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  position: fixed;
+  margin-left : 7%;
 }
 
 #container h1{
